<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    
    >

    <item android:id="@+id/add_to_favourites"
        android:icon="@drawable/add_to_favorites_50"
        android:title="@string/add_to_favourites_menu_item"
        app:showAsAction="always"
        android:visible="true"

        />
    <item
        android:id="@+id/remove_from_favourites"
        android:icon="@drawable/in_favorites_50"
        android:title="@string/in_favourites_menu_item"
        app:showAsAction="always"
        android:visible="false"/>



</menu>

